force-app/main/default/objects/Performance_Appraisal_Tracking__c/Performance_Appraisal_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracking Appraisal, related to Appointment and Prob Report</description>
    <label>Performance Appraisal Tracking</label>
    <nameField>
        <displayFormat>PAT-{00000}</displayFormat>
        <label>Performance Appraisal Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Appraisal Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>