force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Date__c</fullName>
    <label>Appraisal Completion Date</label>
    <type>Date</type>
</CustomField>