force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Appraisal_Period__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Period__c</fullName>
    <formula>TEXT ( YEAR(DATEVALUE(CreatedDate)) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraisal Period</label>
    <type>Text</type>
</CustomField>